--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -112,8 +112,11 @@
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="ZDefGame.cs" />
     <Compile Include="Sprite.cs" />
+    <Compile Include="Terrain\Tile.cs" />
+    <Compile Include="Terrain\TileMap.cs" />
+    <Compile Include="Terrain\TileType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
