--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -109,7 +109,9 @@
   <ItemGroup>
     <Compile Include="Camera2D.cs" />
     <Compile Include="InputHandler.cs" />
+    <Compile Include="PathFinder.cs" />
     <Compile Include="PerlinNoise2D.cs" />
+    <Compile Include="PixelCollider.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
