--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Camera2D.cs" />
     <Compile Include="InputHandler.cs" />
+    <Compile Include="Lighting.cs" />
     <Compile Include="PathFinder.cs" />
     <Compile Include="PerlinNoise2D.cs" />
     <Compile Include="PixelCollider.cs" />
