--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -108,8 +108,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera2D.cs" />
-    <Compile Include="Human\Human.cs" />
-    <Compile Include="Human\SelectionHandle.cs" />
+    <Compile Include="Entity\Human.cs" />
+    <Compile Include="Entity\SelectionHandle.cs" />
     <Compile Include="InputHandler.cs" />
     <Compile Include="Lighting.cs" />
     <Compile Include="PathFinder.cs" />
