--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Terrain\GradientCircle.cs" />
+    <Compile Include="Terrain\Heightmap.cs" />
     <Compile Include="ZDefGame.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Terrain\Tile.cs" />
