--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera2D.cs" />
+    <Compile Include="Entity\Building.cs" />
     <Compile Include="Entity\Human.cs" />
     <Compile Include="Entity\SelectionHandle.cs" />
     <Compile Include="InputHandler.cs" />
