--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Entity\Building.cs" />
     <Compile Include="Entity\Human.cs" />
     <Compile Include="Entity\SelectionHandle.cs" />
+    <Compile Include="Entity\Tree.cs" />
     <Compile Include="Entity\Wall.cs" />
     <Compile Include="Entity\Weapon.cs" />
     <Compile Include="Entity\WoodenBarricade.cs" />
