--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -120,6 +120,7 @@
     <Compile Include="PathFinder.cs" />
     <Compile Include="PerlinNoise2D.cs" />
     <Compile Include="PixelCollider.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
