--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -93,6 +93,8 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -127,6 +129,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Terrain\Heightmap.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="ZDefGame.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Terrain\Tile.cs" />
