--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Entity\Wall.cs" />
     <Compile Include="Entity\Weapon.cs" />
     <Compile Include="Entity\WoodenBarricade.cs" />
+    <Compile Include="Entity\Zombie.cs" />
     <Compile Include="GUI\MainMenu.cs" />
     <Compile Include="GUI\Menu.cs" />
     <Compile Include="InputHandler.cs" />
