--- a/GameBase/GameBase/GameBase.csproj
+++ b/GameBase/GameBase/GameBase.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Terrain\Heightmap.cs" />
+    <Compile Include="Terrain\LightMap.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="ZDefGame.cs" />
     <Compile Include="Sprite.cs" />
